--- a/hack2/demo/src/main/resources/application.properties
+++ b/hack2/demo/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+server.port=8090
+spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
